fixed avatar vertical alignment issue

--- a/src/main/resources/static/styles/mobile.css
+++ b/src/main/resources/static/styles/mobile.css
@@ -36,6 +36,8 @@
 
 .message-interface-head input {
     border: none;
+    font-weight: 100;
+    font-size: 0.85rem;
 }
 
 .message-interface-head input:focus {
@@ -43,14 +45,14 @@
 }
 
 .avatar > * {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 1rem;
-    height: 1rem;
-    padding: 12px;
+    display: grid;
+    place-items: center;
+    width: 24px;
+    height: 24px;
+    padding: 8px;
     border-radius: var(--radius-full);
     cursor: default;
+    line-height: 0;
 }
 
 /* Message Container Section */
